Checkmk/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-checkmk
  namespace: checkmk
  labels:
    app: checkmk
spec:
  replicas: 1       # NOTE: must be 1; not designed for horizontal scaling
  selector:
    matchLabels:
      app: checkmk
  template:
    metadata:
      labels:
        app: checkmk
    spec:
      containers:
        - name: checkmk
          image: checkmk/check-mk-raw:2.3.0-2025.06.27
          ports:
            - containerPort: 5000
              name: web
              protocol: TCP
            - containerPort: 8000
              name: redirect
              protocol: TCP
            - containerPort: 162
              name: snmptrap
              protocol: UDP
          volumeMounts:
            - name: checkmk-data
              mountPath: /omd/sites
            - name: tmpfs-volume
              mountPath: /opt/omd/sites/cmk/tmp
            - name: ca-bundle
              mountPath: /etc/ssl/certs
      volumes:
        - name: checkmk-data
          persistentVolumeClaim:
            claimName: checkmk-pvc
        - name: tmpfs-volume
          emptyDir:
            medium: Memory
        - name: custom-ca
          secret:
            secretName: my-root-ca-secret
        - name: ca-bundle
          emptyDir: {}
