Checkmk/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkmk-service
  namespace: checkmk
spec:
  type: NodePort
  selector:
    app: checkmk
  ports:
    - name: web
      port: 5000
      targetPort: 5000
      protocol: TCP
    - name: redirect
      port: 8000
      targetPort: 8000
      protocol: TCP
    - name: snmptrap
      port: 162
      targetPort: 162
      protocol: UDP
